--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "type": "git",
     "url": "https://gitlab.com/DerekKent/derekkent.com.git"
   },
-  "license": "ISC",
+  "license": "CC0-1.0",
   "devDependencies": {
     "babel-eslint": "6.0.4",
     "babel-plugin-transform-object-assign": "^6.8.0",
