--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "babel-eslint": "6.0.4",
-    "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-plugin-transform-object-assign": "6.8.0",
     "babel-preset-es2015": "6.9.0",
-    "browser-sync": "2.12.10",
+    "browser-sync": "2.13.0",
     "connect-history-api-fallback": "1.2.0",
     "del": "2.2.0",
-    "eslint": "2.11.1",
+    "eslint": "2.12.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "3.1.0",
     "gulp-babel": "6.1.2",
@@ -37,7 +37,7 @@
     "gulp-if": "2.0.1",
     "gulp-imagemin": "3.0.1",
     "gulp-load-plugins": "1.2.4",
-    "gulp-real-favicon": "^0.2.1",
+    "gulp-real-favicon": "0.2.1",
     "gulp-rename": "1.2.2",
     "gulp-replace": "0.5.4",
     "gulp-sass": "2.3.1",
@@ -47,7 +47,7 @@
     "gulp-uglify": "1.5.3",
     "gulp-util": "3.0.7",
     "gulp-wrap": "0.13.0",
-    "jspm": "0.17.0-beta.16",
+    "jspm": "0.17.0-beta.21",
     "require-dir": "0.3.0",
     "sw-precache": "3.2.0",
     "yargs": "4.7.1"
@@ -68,6 +68,7 @@
       "plugin-babel": "npm:systemjs-plugin-babel@^0.0.9"
     },
     "peerDependencies": {
+      "buffer": "github:jspm/nodelibs-buffer@^0.2.0-alpha",
       "fs": "github:jspm/nodelibs-fs@^0.2.0-alpha",
       "incremental-dom": "npm:incremental-dom@^0.4.1",
       "path": "github:jspm/nodelibs-path@^0.2.0-alpha",
