--- a/gulp/.scss-lint.yml
+++ b/gulp/.scss-lint.yml
@@ -18,12 +18,15 @@ linters:
         style: include_zero
 
     NestingDepth:
-        max_depth: 5
+        max_depth: 4
         ignore_parent_selectors: true
 
     PropertyUnits:
         global: ['em', 'rem', '%', 'vw', 'vh', 'vmin', 'vmax', 's']
 
     SelectorDepth:
-        max_depth: 5
+        max_depth: 4
         ignore_parent_selectors: true
+
+    SelectorFormat:
+        enabled: false
