--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "license": "CC0-1.0",
   "devDependencies": {
+    "ava": "0.15.2",
     "babel-eslint": "6.1.0",
     "babel-plugin-transform-object-assign": "6.8.0",
     "babel-preset-es2015": "6.9.0",
@@ -28,7 +29,6 @@
     "eslint": "2.13.1",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "3.1.0",
-    "gulp-ava": "0.12.1",
     "gulp-babel": "6.1.2",
     "gulp-clip-empty-files": "0.1.2",
     "gulp-cssnano": "2.1.2",
