--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "prepublish": "jspm install",
     "upgrade": "jspm update",
-    "test": "gulp dev-setup && nyc ava"
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
@@ -27,8 +27,10 @@
     "connect-history-api-fallback": "1.2.0",
     "del": "2.2.1",
     "eslint": "2.13.1",
+    "find-pkg": "0.1.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "3.1.0",
+    "gulp-ava": "0.12.1",
     "gulp-babel": "6.1.2",
     "gulp-clip-empty-files": "0.1.2",
     "gulp-cssnano": "2.1.2",
@@ -49,27 +51,26 @@
     "gulp-uglify": "1.5.4",
     "gulp-util": "3.0.7",
     "gulp-wrap": "0.13.0",
+    "jsdom-global": "2.0.0",
     "jspm": "0.17.0-beta.22",
-    "nyc": "6.6.1",
     "require-dir": "0.3.0",
     "sw-precache": "3.2.0",
     "yargs": "4.7.1"
   },
   "jspm": {
-    "main": "/app/main.js",
+    "main": "app/main.js",
     "directories": {
       "lib": "src/app"
     },
     "configFiles": {
-      "jspm:browser": "src/jspm.browser.js",
-      "jspm": "src/jspm.config.js"
+      "jspm": "src/jspm.config.js",
+      "jspm:dev": "src/jspm.dev.js",
+      "jspm:browser": "src/jspm.browser.js"
     },
     "dependencies": {
       "superb": "npm:superb.js@^0.0.4"
     },
-    "devDependencies": {
-      "plugin-babel": "npm:systemjs-plugin-babel@^0.0.9"
-    },
+    "devDependencies": {},
     "peerDependencies": {
       "buffer": "github:jspm/nodelibs-buffer@^0.2.0-alpha",
       "fs": "github:jspm/nodelibs-fs@^0.2.0-alpha",
@@ -80,14 +81,10 @@
   },
   "ava": {
     "require": [
-      "./test/helpers/jspm_loader.js",
+      "./test/helpers/jspm_loader",
       "./test/helpers/setup-browser-env.js"
     ],
     "verbose": true
-  },
-  "nyc": {
-    "exclude": ["dev/libs/**", "dev/jspm_packages/**"],
-    "include": ["dev/**"]
   },
   "engines": {
     "node": ">=6.2"
