--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "devDependencies": {
     "ava": "0.15.2",
     "babel-eslint": "6.1.2",
+    "babel-plugin-transform-class-properties": "6.10.2",
+    "babel-plugin-transform-decorators": "6.8.0",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-object-assign": "6.8.0",
     "babel-preset-es2015": "6.9.0",
     "browser-sync": "2.13.0",
