Allow CSS rule overrides for browser compatibility issues

--- a/gulp/.scss-lint.yml
+++ b/gulp/.scss-lint.yml
@@ -10,6 +10,9 @@ linters:
     Comment:
         enabled: false
 
+    DuplicateProperty:
+        ignore_consecutive: true
+
     Indentation:
         width: 4
 
