Upgrade dependencies and explicitly include jsdom

--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "babel-preset-es2015": "6.13.2",
     "browser-sync": "2.14.0",
     "connect-history-api-fallback": "1.3.0",
-    "del": "2.2.1",
-    "eslint": "3.2.2",
+    "del": "2.2.2",
+    "eslint": "3.3.1",
     "find-pkg": "0.1.2",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-autoprefixer": "3.1.0",
-    "gulp-ava": "0.13.0",
+    "gulp-autoprefixer": "3.1.1",
+    "gulp-ava": "0.14.0",
     "gulp-babel": "6.1.2",
     "gulp-clip-empty-files": "0.1.2",
     "gulp-cssnano": "2.1.2",
@@ -36,7 +36,7 @@
     "gulp-htmlmin": "2.0.0",
     "gulp-humans": "2.0.2",
     "gulp-if": "2.0.1",
-    "gulp-imagemin": "3.0.2",
+    "gulp-imagemin": "3.0.3",
     "gulp-load-plugins": "1.2.4",
     "gulp-real-favicon": "0.2.1",
     "gulp-rename": "1.2.2",
@@ -48,11 +48,12 @@
     "gulp-uglify": "2.0.0",
     "gulp-util": "3.0.7",
     "gulp-wrap": "0.13.0",
-    "jsdom-global": "2.0.0",
+    "jsdom": "9.4.2",
+    "jsdom-global": "2.1.0",
     "jspm": "0.17.0-beta.25",
     "require-dir": "0.3.0",
     "sw-precache": "4.0.0",
-    "yargs": "4.8.1"
+    "yargs": "5.0.0"
   },
   "jspm": {
     "main": "src/app/main.js",
