--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prepublish": "jspm install",
     "upgrade": "jspm update",
-    "test": "gulp test"
+    "test": "gulp build && gulp test"
   },
   "repository": {
     "type": "git",
@@ -80,6 +80,19 @@
       "./test/helpers/setup-browser-env.js"
     ],
     "verbose": true
+  },
+  "nyc": {
+    "include": [
+      "dev/**/*.js"
+    ],
+    "exclude": [
+      "dist",
+      "gulp",
+      "jspm_packages",
+      "node_modules",
+      "src",
+      "test"
+    ]
   },
   "engines": {
     "node": ">=6.2"
