--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "ava": "0.16.0",
-    "babel-eslint": "6.1.2",
-    "babel-plugin-transform-class-properties": "6.11.5",
+    "babel-eslint": "7.0.0",
+    "babel-plugin-transform-class-properties": "6.16.0",
     "babel-plugin-transform-decorators": "6.13.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-object-assign": "6.8.0",
-    "babel-preset-es2015": "6.14.0",
-    "browser-sync": "2.15.0",
+    "babel-preset-es2015": "6.16.0",
+    "browser-sync": "2.17.5",
     "connect-history-api-fallback": "1.3.0",
     "del": "2.2.2",
-    "eslint": "3.4.0",
+    "eslint": "3.8.1",
     "find-pkg": "0.1.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "3.1.1",
@@ -33,27 +33,27 @@
     "gulp-cssnano": "2.1.2",
     "gulp-env": "0.4.0",
     "gulp-eslint": "3.0.1",
-    "gulp-htmlmin": "2.0.0",
+    "gulp-htmlmin": "3.0.0",
     "gulp-humans": "2.0.2",
     "gulp-if": "2.0.1",
     "gulp-imagemin": "3.0.3",
-    "gulp-load-plugins": "1.2.4",
+    "gulp-load-plugins": "1.3.0",
     "gulp-real-favicon": "0.2.1",
     "gulp-rename": "1.2.2",
     "gulp-replace": "0.5.4",
     "gulp-sass": "2.3.2",
     "gulp-scss-lint": "0.4.0",
-    "gulp-sourcemaps": "2.0.0-alpha",
+    "gulp-sourcemaps": "2.1.1",
     "gulp-superviewsjs": "github:dak/gulp-superviewsjs",
     "gulp-uglify": "2.0.0",
     "gulp-util": "3.0.7",
     "gulp-wrap": "0.13.0",
-    "jsdom": "9.5.0",
+    "jsdom": "9.8.0",
     "jsdom-global": "2.1.0",
     "jspm": "0.17.0-beta.28",
-    "require-dir": "0.3.0",
-    "sw-precache": "4.0.0",
-    "yargs": "5.0.0"
+    "require-dir": "0.3.1",
+    "sw-precache": "4.2.1",
+    "yargs": "6.3.0"
   },
   "jspm": {
     "main": "src/app/main.js",
@@ -67,7 +67,7 @@
     },
     "dependencies": {
       "fetch": "npm:whatwg-fetch@^1.0.0",
-      "superb": "npm:superb.js@^0.2.7"
+      "superb": "npm:superb.js@^0.2.10"
     },
     "devDependencies": {},
     "peerDependencies": {
