--- a/package.json
+++ b/package.json
@@ -66,12 +66,16 @@
       "jspm:browser": "src/jspm.browser.js"
     },
     "dependencies": {
+      "babel-polyfill": "npm:babel-polyfill@^6.16.0",
       "fetch": "npm:whatwg-fetch@^1.0.0",
       "superb": "npm:superb.js@^0.2.10"
     },
     "devDependencies": {},
     "peerDependencies": {
-      "incremental-dom": "npm:incremental-dom@^0.4.1"
+      "fs": "npm:jspm-nodelibs-fs@^0.2.0",
+      "incremental-dom": "npm:incremental-dom@^0.4.1",
+      "path": "npm:jspm-nodelibs-path@^0.2.0",
+      "process": "npm:jspm-nodelibs-process@^0.2.0"
     },
     "overrides": {}
   },
