Use ESLint 3 in Code Climate

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -25,6 +25,7 @@ engines:
     - 9c533e1448af5652247f940a471f64e7
   eslint:
     enabled: true
+    channel: 'eslint-3'
   scss-lint:
     enabled: true
     config: 'gulp/.scss-lint.yml'
