--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
   },
   "license": "CC0-1.0",
   "devDependencies": {
-    "ava": "0.17.0",
-    "babel-eslint": "7.1.1",
-    "babel-plugin-transform-class-properties": "6.19.0",
-    "babel-plugin-transform-decorators": "6.13.0",
+    "ava": "0.19.1",
+    "babel-eslint": "7.2.3",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-decorators": "6.24.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-plugin-transform-object-assign": "6.8.0",
-    "babel-preset-es2015": "6.18.0",
-    "browser-sync": "2.18.6",
+    "babel-plugin-transform-object-assign": "6.22.0",
+    "babel-preset-es2015": "6.24.1",
+    "browser-sync": "2.18.8",
     "connect-history-api-fallback": "1.3.0",
     "del": "2.2.2",
-    "eslint": "3.13.1",
+    "eslint": "3.19.0",
     "find-pkg": "0.1.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "3.1.1",
-    "gulp-ava": "0.15.0",
+    "gulp-ava": "0.17.1",
     "gulp-babel": "6.1.2",
     "gulp-clip-empty-files": "0.1.2",
     "gulp-cssnano": "2.1.2",
@@ -36,27 +36,27 @@
     "gulp-htmlmin": "3.0.0",
     "gulp-humans": "2.0.2",
     "gulp-if": "2.0.2",
-    "gulp-imagemin": "3.1.1",
-    "gulp-load-plugins": "1.4.0",
+    "gulp-imagemin": "3.2.0",
+    "gulp-load-plugins": "1.5.0",
     "gulp-real-favicon": "0.2.2",
     "gulp-rename": "1.2.2",
     "gulp-replace": "0.5.4",
     "gulp-sass": "3.1.0",
     "gulp-scss-lint": "0.4.0",
-    "gulp-sourcemaps": "2.4.0",
+    "gulp-sourcemaps": "2.6.0",
     "gulp-superviewsjs": "github:dak/gulp-superviewsjs",
-    "gulp-uglify": "2.0.0",
+    "gulp-uglify": "2.1.2",
     "gulp-util": "3.0.8",
     "gulp-wrap": "0.13.0",
-    "jsdom": "9.9.1",
+    "jsdom": "9.12.0",
     "jsdom-global": "2.1.1",
-    "jspm": "0.17.0-beta.32",
+    "jspm": "0.17.0-beta.41",
     "require-dir": "0.3.1",
-    "sw-precache": "4.3.0",
-    "yargs": "6.6.0"
+    "sw-precache": "5.1.0",
+    "yargs": "7.1.0"
   },
   "jspm": {
-    "main": "src/app/main.js",
+    "main": "main.js",
     "directories": {
       "lib": "src/app"
     },
@@ -66,9 +66,9 @@
       "jspm:browser": "src/jspm.browser.js"
     },
     "dependencies": {
-      "babel-polyfill": "npm:babel-polyfill@^6.16.0",
+      "babel-polyfill": "npm:babel-polyfill@^6.23.0",
       "fetch": "npm:whatwg-fetch@^1.0.0",
-      "superb": "npm:superb.js@^0.2.13"
+      "superb": "npm:superb.js@^0.2.16"
     },
     "devDependencies": {},
     "peerDependencies": {
@@ -76,8 +76,7 @@
       "incremental-dom": "npm:incremental-dom@^0.5.1",
       "path": "npm:jspm-nodelibs-path@^0.2.0",
       "process": "npm:jspm-nodelibs-process@^0.2.0"
-    },
-    "overrides": {}
+    }
   },
   "ava": {
     "require": [
