--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-ava": "0.17.1",
     "gulp-babel": "6.1.2",
     "gulp-clip-empty-files": "0.1.2",
+    "gulp-concat": "2.6.1",
     "gulp-cssnano": "2.1.2",
     "gulp-env": "0.4.0",
     "gulp-eslint": "3.0.1",
@@ -37,6 +38,7 @@
     "gulp-humans": "2.0.2",
     "gulp-if": "2.0.2",
     "gulp-imagemin": "3.2.0",
+    "gulp-insert": "0.5.0",
     "gulp-load-plugins": "1.5.0",
     "gulp-real-favicon": "0.2.2",
     "gulp-rename": "1.2.2",
@@ -67,6 +69,7 @@
     },
     "dependencies": {
       "babel-polyfill": "npm:babel-polyfill@^6.23.0",
+      "es6-promise": "npm:es6-promise@^4.1.0",
       "fetch": "npm:whatwg-fetch@^1.0.0",
       "superb": "npm:superb.js@^0.2.16"
     },
