--- a/package.json
+++ b/package.json
@@ -13,23 +13,23 @@
   },
   "license": "CC0-1.0",
   "devDependencies": {
-    "ava": "0.19.1",
-    "babel-eslint": "7.2.3",
+    "ava": "0.22.0",
+    "babel-eslint": "8.0.1",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-decorators": "6.24.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-es2015-modules-systemjs": "6.24.1",
     "babel-plugin-transform-object-assign": "6.22.0",
-    "babel-preset-es2015": "6.24.1",
-    "browser-sync": "2.18.12",
+    "babel-preset-env": "1.6.0",
+    "browser-sync": "2.18.13",
     "connect-history-api-fallback": "1.3.0",
     "del": "3.0.0",
-    "eslint": "4.0.0",
+    "eslint": "4.8.0",
     "find-pkg": "1.0.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "4.0.0",
-    "gulp-ava": "0.17.1",
-    "gulp-babel": "6.1.2",
+    "gulp-ava": "0.18.0",
+    "gulp-babel": "7.0.0",
     "gulp-clip-empty-files": "0.1.2",
     "gulp-concat": "2.6.1",
     "gulp-cssnano": "2.1.2",
@@ -38,25 +38,25 @@
     "gulp-htmlmin": "3.0.0",
     "gulp-humans": "2.0.2",
     "gulp-if": "2.0.2",
-    "gulp-imagemin": "3.3.0",
+    "gulp-imagemin": "3.4.0",
     "gulp-insert": "0.5.0",
     "gulp-load-plugins": "1.5.0",
     "gulp-real-favicon": "0.2.2",
     "gulp-rename": "1.2.2",
-    "gulp-replace": "0.5.4",
+    "gulp-replace": "0.6.1",
     "gulp-sass": "3.1.0",
-    "gulp-scss-lint": "0.4.0",
-    "gulp-sourcemaps": "2.6.0",
+    "gulp-scss-lint": "0.5.0",
+    "gulp-sourcemaps": "2.6.1",
     "gulp-superviewsjs": "github:alexsad/gulp-superviewsjs",
     "gulp-uglify": "3.0.0",
     "gulp-util": "3.0.8",
     "gulp-wrap": "0.13.0",
-    "jsdom": "11.0.0",
+    "jsdom": "11.3.0",
     "jsdom-global": "3.0.2",
-    "jspm": "0.17.0-beta.42",
+    "jspm": "0.17.0-beta.45",
     "require-dir": "0.3.2",
     "sw-precache": "5.2.0",
-    "yargs": "8.0.2"
+    "yargs": "9.0.1"
   },
   "jspm": {
     "main": "main.js",
@@ -69,17 +69,17 @@
       "jspm:browser": "src/jspm.browser.js"
     },
     "dependencies": {
-      "babel-polyfill": "npm:babel-polyfill@^6.23.0",
-      "es6-promise": "npm:es6-promise@^4.1.0",
-      "fetch": "npm:whatwg-fetch@^1.0.0",
+      "babel-polyfill": "npm:babel-polyfill@^6.26.0",
+      "es6-promise": "npm:es6-promise@^4.1.1",
+      "fetch": "npm:whatwg-fetch@^2.0.3",
       "superb": "npm:superb.js@^0.2.16"
     },
     "devDependencies": {},
     "peerDependencies": {
-      "fs": "npm:jspm-nodelibs-fs@^0.2.0",
-      "incremental-dom": "local:incremental-dom@0.5.1",
-      "path": "npm:jspm-nodelibs-path@^0.2.0",
-      "process": "npm:jspm-nodelibs-process@^0.2.0"
+      "fs": "npm:jspm-nodelibs-fs@^0.2.1",
+      "incremental-dom": "npm:incremental-dom@0.5.1",
+      "path": "npm:jspm-nodelibs-path@^0.2.3",
+      "process": "npm:jspm-nodelibs-process@^0.2.1"
     }
   },
   "ava": {
@@ -103,6 +103,6 @@
     ]
   },
   "engines": {
-    "node": ">=6.9.2"
+    "node": ">=8.6.0"
   }
 }
