--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -78,7 +78,7 @@
         "no-shadow-restricted-names": "error",
         "no-shadow": "error",
         "no-undef-init": "error",
-        "no-undefined": "error",
+        "no-undefined": "off",
         "no-use-before-define": "error",
 
         "array-bracket-spacing": ["error", "never"],
