--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,26 +3,47 @@ engines:
     enabled: true
     config:
       languages:
-      - javascript
+        - javascript
     exclude_fingerprints:
-    - 6b2a5b0b7886f37dccdfaf652942b253
-    - a920429d130fa919b124e1d13c184aba
-    - cc23edd6983df267de8c179a6ad41488
-    - 76c0b7946915851237ea99d30365892d
-    - 065e3360c8c2d5ab92b94aefab67f564
-    - 51d5079e68f4e3a22566806e2b037fcc
-    - 0703e49442f382c21b2a23f98b197a8a
-    - 6ce92b75975c1f1114c7e91733fe2602
-    - ede7b8ce295b030cb7fe27f02c715ab8
-    - e5678874f5c8ad7f2c23b4e5207a3ba6
-    - 549d1ec05c85207aa9472a449751586c
-    - f64328b7a49c58761e58fb6554c85150
-    - b9133292c00cafb6ea2bc82184bb43c5
-    - eb420fc77ad54925cdfd8e7823d3b231
-    - 98b593d1c263aab28bb96938c1816ce1
-    - c4d7dbac8bfe54781d910f8d4c8e761e
-    - 4baa8f330fd7207cd898e378d3f33ed2
-    - 9c533e1448af5652247f940a471f64e7
+      - a0ccea7a36ce865044af95e010b7f562
+      - 56e1ec1549e13db75a7f0f7fec10faf2
+      - 2a8c2790b62ccb9ced3cefe01268520f
+      - d1c805c13dbb3cbb457f96a147e5794e
+      - 0d5bf1c5c2c34a314d0b9e5230062e1d
+      - 1a2d9de494ff2d74ed6a1073c93ebb2f
+      - c3c235ced84179c207e467eebb82a68d
+      - 2dceefeb8e13e5b9be85ac4c1bd659ca
+      - 51c8000dda5c0ad272fe78016aad3780
+      - 135e922a0fbe1611a1dc65235f34b772
+      - a3083e81fe2ab793dd228db462690269
+      - 06939a6a73ee27682e53f16a06013644
+      - 4fc6ff8345793d1796c619d140de317d
+      - 73b68f43d607395a26cef3986033da13
+      - 47eddfa53f151541dfb2ee31741200fc
+      - 8c8f3b57894e6fba2f41132dd1c2c35e
+      - 45a37dc4259827b2ae88491df06c7f7b
+      - 4cb613a26cf11b267b993dfc4b48e4a1
+      - 7118029611d376180ba9f683610c1439
+      - 1e687b7cefe00027c55530c96e0a0f5c
+      - 46c407fba230347b67abfbd4adb808c4
+      - 04618bf50ac1099e5fe5ca0e1ec2563e
+      - 6e23f5257fbfcde505933a6df197d7a9
+      - b7806c0cceb8e9e04a853464cdc91c79
+      - 739672df2a92d0601efc5e7812599eb9
+      - 530a3f6a56f979d91a5123f305fd82c4
+      - 8d3f56b5152a006d9d710bb2e31aa829
+      - 341165b4a44e6d8fdbfb71bb8fc07c2b
+      - 16e55edcdee2e0d016b9ace6a7974045
+      - e3874c0650577a2d94cc9af01039a2e7
+      - e9265ec8329e29bd1c1f7dbbbeabe08f
+      - d0b15062a7638fb9e2f230cdf0372da2
+      - 188d931562f3b9586f1435622539ea7c
+      - 731cefbb5c5cd7ae351bfb76e9b03e36
+      - 065e3360c8c2d5ab92b94aefab67f564
+      - 6ce92b75975c1f1114c7e91733fe2602
+      - 51d5079e68f4e3a22566806e2b037fcc
+      - 0703e49442f382c21b2a23f98b197a8a
+      - ede7b8ce295b030cb7fe27f02c715ab8
   eslint:
     enabled: true
     channel: 'eslint-4'
@@ -33,7 +54,12 @@ engines:
     enabled: true
 ratings:
   paths:
-  - '**.js'
-  - '**.scss'
+    - '**.js'
+    - '**.scss'
 exclude_paths:
   - 'src/jspm.*.js'
+  - 'coverage/'
+  - 'dev/'
+  - 'dist/'
+  - 'jspm_packages/'
+  - 'node_modules/'
