--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.2.0",
     "description": "Derek Kent for Maryland District 32 Delegate official web site",
     "scripts": {
-        "prepublish": "jspm install",
+        "prepare": "jspm install",
         "upgrade": "jspm update",
         "test": "gulp build --test && gulp test"
     },
@@ -13,21 +13,21 @@
     },
     "license": "CC0-1.0",
     "devDependencies": {
-        "ava": "0.23.0",
-        "babel-eslint": "8.0.2",
+        "ava": "0.24.0",
+        "babel-eslint": "8.1.2",
         "babel-plugin-transform-class-properties": "6.24.1",
         "babel-plugin-transform-decorators": "6.24.1",
         "babel-plugin-transform-decorators-legacy": "1.3.4",
         "babel-plugin-transform-es2015-modules-systemjs": "6.24.1",
         "babel-preset-env": "1.6.1",
         "babel-preset-stage-3": "6.24.1",
-        "browser-sync": "2.18.13",
+        "browser-sync": "2.23.2",
         "connect-history-api-fallback": "1.5.0",
         "del": "3.0.0",
-        "eslint": "4.11.0",
+        "eslint": "4.14.0",
         "find-pkg": "1.0.0",
-        "gulp": "github:gulpjs/gulp#4.0",
-        "gulp-autoprefixer": "4.0.0",
+        "gulp": "4.0",
+        "gulp-autoprefixer": "4.1.0",
         "gulp-ava": "0.18.0",
         "gulp-babel": "7.0.0",
         "gulp-clip-empty-files": "0.1.2",
@@ -35,10 +35,10 @@
         "gulp-cssnano": "2.1.2",
         "gulp-env": "0.4.0",
         "gulp-eslint": "4.0.0",
-        "gulp-htmlmin": "3.0.0",
+        "gulp-htmlmin": "4.0.0",
         "gulp-humans": "2.0.2",
         "gulp-if": "2.0.2",
-        "gulp-imagemin": "3.4.0",
+        "gulp-imagemin": "4.1.0",
         "gulp-insert": "0.5.0",
         "gulp-load-plugins": "1.5.0",
         "gulp-real-favicon": "0.2.2",
@@ -46,12 +46,12 @@
         "gulp-replace": "0.6.1",
         "gulp-sass": "3.1.0",
         "gulp-scss-lint": "0.5.0",
-        "gulp-sourcemaps": "2.6.1",
+        "gulp-sourcemaps": "2.6.3",
         "gulp-superviewsjs": "github:alexsad/gulp-superviewsjs",
         "gulp-uglify": "3.0.0",
         "gulp-util": "3.0.8",
         "gulp-wrap": "0.13.0",
-        "jsdom": "11.3.0",
+        "jsdom": "11.5.1",
         "jsdom-global": "3.0.2",
         "jspm": "0.17.0-beta.47",
         "require-dir": "0.3.2",
@@ -75,7 +75,7 @@
             "fs": "npm:jspm-nodelibs-fs@^0.2.1",
             "incremental-dom": "npm:incremental-dom@^0.5.1",
             "path": "npm:jspm-nodelibs-path@^0.2.3",
-            "process": "npm:jspm-nodelibs-process@^0.2.1"
+            "process": "npm:jspm-nodelibs-process@^0.2.0"
         },
         "overrides": {
             "npm:incremental-dom@0.5.1": {
