--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     },
     "license": "CC0-1.0",
     "devDependencies": {
+        "@babel/core": "7.0.0-beta.44",
+        "@babel/plugin-proposal-class-properties": "7.0.0-beta.44",
+        "@babel/plugin-proposal-decorators": "7.0.0-beta.44",
+        "@babel/plugin-transform-modules-systemjs": "7.0.0-beta.44",
+        "@babel/preset-env": "7.0.0-beta.44",
+        "@babel/preset-stage-3": "7.0.0-beta.44",
         "ava": "0.25.0",
+        "babel-core": "7.0.0-bridge.0",
         "babel-eslint": "8.2.2",
-        "babel-plugin-transform-class-properties": "6.24.1",
-        "babel-plugin-transform-decorators": "6.24.1",
-        "babel-plugin-transform-decorators-legacy": "1.3.4",
-        "babel-plugin-transform-es2015-modules-systemjs": "6.24.1",
-        "babel-preset-env": "1.6.1",
-        "babel-preset-stage-3": "6.24.1",
         "browser-sync": "2.23.6",
         "connect-history-api-fallback": "1.5.0",
         "del": "3.0.0",
@@ -29,7 +30,7 @@
         "gulp": "4.0",
         "gulp-autoprefixer": "5.0.0",
         "gulp-ava": "0.19.0",
-        "gulp-babel": "7.0.1",
+        "gulp-babel": "8.0.0-beta.2",
         "gulp-clip-empty-files": "0.1.2",
         "gulp-concat": "2.6.1",
         "gulp-cssnano": "2.1.3",
@@ -44,14 +45,14 @@
         "gulp-real-favicon": "0.2.2",
         "gulp-rename": "1.2.2",
         "gulp-replace": "0.6.1",
-        "gulp-sass": "3.2.1",
+        "gulp-sass": "4.0.0",
         "gulp-scss-lint": "0.6.1",
         "gulp-sourcemaps": "2.6.4",
         "gulp-superviewsjs": "github:dak/gulp-superviewsjs#upgrade",
         "gulp-uglify": "3.0.0",
         "gulp-util": "3.0.8",
         "gulp-wrap": "0.13.0",
-        "jsdom": "11.6.2",
+        "jsdom": "11.7.0",
         "jsdom-global": "3.0.2",
         "jspm": "0.17.0-beta.47",
         "require-dir": "1.0.0",
@@ -66,8 +67,8 @@
             "jspm:browser": "src/jspm.browser.js"
         },
         "dependencies": {
-            "babel-polyfill": "npm:babel-polyfill@^6.26.0",
-            "es6-promise": "npm:es6-promise@^4.1.1",
+            "babel-polyfill": "npm:@babel/polyfill@^7.0.0-beta.44",
+            "es6-promise": "npm:es6-promise@^4.2.4",
             "superb": "npm:superb.js@^0.3.0"
         },
         "devDependencies": {},
@@ -116,6 +117,6 @@
         ]
     },
     "engines": {
-        "node": ">=8.6.0"
+        "node": ">=8.11.1"
     }
 }
