--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@babel/plugin-transform-modules-systemjs": "7.0.0-beta.44",
         "@babel/preset-env": "7.0.0-beta.44",
         "@babel/preset-stage-3": "7.0.0-beta.44",
+        "ansi-colors": "1.1.0",
         "ava": "0.25.0",
         "babel-core": "7.0.0-bridge.0",
         "babel-eslint": "8.2.2",
@@ -26,6 +27,7 @@
         "connect-history-api-fallback": "1.5.0",
         "del": "3.0.0",
         "eslint": "4.19.1",
+        "fancy-log": "1.3.2",
         "find-pkg": "2.0.0",
         "gulp": "4.0",
         "gulp-autoprefixer": "5.0.0",
@@ -50,7 +52,6 @@
         "gulp-sourcemaps": "2.6.4",
         "gulp-superviewsjs": "github:dak/gulp-superviewsjs#upgrade",
         "gulp-uglify": "3.0.0",
-        "gulp-util": "3.0.8",
         "gulp-wrap": "0.13.0",
         "jsdom": "11.7.0",
         "jsdom-global": "3.0.2",
